crates/fortitude_linter/src/diagnostics/message/snapshots/fortitude_linter__diagnostics__message__rdjson__tests__missing_file_stable.snap
---
source: crates/fortitude_linter/src/diagnostics/message/rdjson.rs
expression: env.render(&diag)
---
{
  "diagnostics": [
    {
      "code": {
        "url": "https://docs.astral.sh/ruff/rules/test-diagnostic",
        "value": "stable-test-rule"
      },
      "severity": "ERROR",
      "message": "main diagnostic message"
    }
  ],
  "severity": "WARNING",
  "source": {
    "name": "fortitude",
    "url": "https://fortitude.readthedocs.io/"
  }
}
