crates/fortitude_linter/src/diagnostics/message/snapshots/fortitude_linter__diagnostics__message__rdjson__tests__output.snap
---
source: crates/fortitude_linter/src/diagnostics/message/rdjson.rs
expression: output
---
{
  "diagnostics": [
    {
      "code": {
        "url": "https://fortitude.readthedocs.io/rules/superfluous-implicit-none",
        "value": "S201"
      },
      "severity": "ERROR",
      "location": {
        "path": "test.f90",
        "range": {
          "end": {
            "line": 6,
            "column": 18
          },
          "start": {
            "line": 6,
            "column": 5
          }
        }
      },
      "message": "'implicit none' set on the enclosing module",
      "suggestions": [
        {
          "range": {
            "end": {
              "line": 6,
              "column": 18
            },
            "start": {
              "line": 6,
              "column": 5
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://fortitude.readthedocs.io/rules/unnamed-end-statement",
        "value": "S061"
      },
      "severity": "ERROR",
      "location": {
        "path": "test.f90",
        "range": {
          "end": {
            "line": 7,
            "column": 17
          },
          "start": {
            "line": 7,
            "column": 3
          }
        }
      },
      "message": "end statement should read 'end subroutine foo'",
      "suggestions": [
        {
          "range": {
            "end": {
              "line": 9,
              "column": 1
            },
            "start": {
              "line": 8,
              "column": 7
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://fortitude.readthedocs.io/rules/star-kind",
        "value": "PORT021"
      },
      "severity": "ERROR",
      "location": {
        "path": "star_kind.f90",
        "range": {
          "end": {
            "line": 1,
            "column": 9
          },
          "start": {
            "line": 1,
            "column": 8
          }
        }
      },
      "message": "integer*4 is non-standard, use integer(4)"
    }
  ],
  "severity": "WARNING",
  "source": {
    "name": "fortitude",
    "url": "https://fortitude.readthedocs.io/"
  }
}
