crates/fortitude_linter/src/diagnostics/message/snapshots/fortitude_linter__diagnostics__message__rdjson__tests__syntax_errors.snap
---
source: crates/fortitude_linter/src/diagnostics/message/rdjson.rs
expression: env.render_diagnostics(&diagnostics)
---
{
  "diagnostics": [
    {
      "code": {
        "value": "invalid-syntax"
      },
      "severity": "ERROR",
      "location": {
        "path": "syntax_errors.py",
        "range": {
          "end": {
            "line": 2,
            "column": 1
          },
          "start": {
            "line": 1,
            "column": 15
          }
        }
      },
      "message": "Expected one or more symbol names after import"
    },
    {
      "code": {
        "value": "invalid-syntax"
      },
      "severity": "ERROR",
      "location": {
        "path": "syntax_errors.py",
        "range": {
          "end": {
            "line": 4,
            "column": 1
          },
          "start": {
            "line": 3,
            "column": 12
          }
        }
      },
      "message": "Expected ')', found newline"
    }
  ],
  "severity": "WARNING",
  "source": {
    "name": "fortitude",
    "url": "https://fortitude.readthedocs.io/"
  }
}
